--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
     Machine Learning Engineer
    </div>
    <div class="contact">
-    <span>
+    <span style="flex-basis: 100%">
      Amsterdam, Netherlands
     </span>
     <a href="mailto:phoenixilya@gmail.com">
