--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
     </li>
     <li>
      <a href="#projects">
-      Selected Projects
+      Projects
      </a>
     </li>
     <li>
@@ -445,7 +445,7 @@
     </li>
     <li>
      <a href="#publications">
-      Selected Publications
+      Publications
      </a>
     </li>
     <li>
