--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
   <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
   <title>
-   $ ilya.gusev --info
+   Ilya Gusev
   </title>
+  <link rel="icon" type="image/png" href="/favicon.png">
   <style>
     * {
       margin: 0;
